- 
    Bug 
- 
    Resolution: Done
- 
    P2: Important 
- 
    Qt Creator 4.6.0
- 
    None
- 
    MacOS Sierra 10.12.2
 
 
After upgrading to QtCreator 4.6 form 4.2, noticed that I am unable to find any *.qrc file from the Locator (Command K). This wasn't the case for Qt Creator 4.2
The *.qrc file is added in my project in .pri file
However, I am able to find the qrc file if I have already opened the file (i.e. the file is in my Opened Documents list) in my editor by right clicking > open in EditorĀ
| For Gerrit Dashboard: QTCREATORBUG-20220 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 225875,2 | ProjectExplorer: List foldernodes in project as well | 4.6 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |