ProjectExplorer: List foldernodes in project as well

List folder nodes (e.g. used for QRC files) in Project::files(...).

Task-number: QTCREATORBUG-20220
Change-Id: I9879d79530fd78a6b0976fe7fdb45a23d2d9c553
Reviewed-by: Eike Ziller <eike.ziller@qt.io>